Small changes to page

--- a/index.html
+++ b/index.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Anders Andersen - Github page</title>
+	<title>Anders Andersen</title>
 
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
 	<style type="text/css">
-		body{
-			background: #fdc162;	
+		body{			
 			text-align: center;
 		}
 
 		h1{
-		 	font:normal 60pt Arial;
+		 	font:normal 40pt Arial;
 		 	color:#FFFFFF;
 		 	text-shadow: 0 1px 0 #ccc,
 		 	0 2px 0 #c9c9c9,
@@ -25,12 +25,39 @@
 		 	0 10px 10px rgba(0,0,0,.2),
 		 	0 20px 20px rgba(0,0,0,.15);
 		}
+
+		#social-icons {
+			width: 100%;
+			display: inline-block;
+			text-align: center;
+		}
+
+		.single-social {
+			display: inline-block;
+		}
+
+		.single-social a{			
+		    font-size: 30px;
+		    padding: 10px;
+		    color:#7F8080;
+		}
+
 	</style>
 
 </head>
 <body>
 
 	<h1>Anders Andersen</h1>
+
+	<div id="social-icons">
+		<div class="single-social">
+			<a href="https://github.com/andersmandersen" target="_blank"><i class="fa fa-github"></i></a>
+		</div>	
+		<div class="single-social">
+			<a href="https://dk.linkedin.com/in/anders-andersen-34a44b7a" target="_blank"><i class="fa fa-linkedin"></i></a>
+		</div>	
+	</div>
+	
 
 </body>
 </html>
